[Java 11] [Broken test] org.mule.runtime.config.internal.context.MuleArtifactContextTestCase: java.lang.IllegalAccessError: class javax.xml.parsers.FactoryFinder